# LiteRT

./: .bazelrc  WORKSPACE
.github/: build-linux-x86.sh
.github/workflows/: ci-build.yml  linux-x86.yml  macos-arm64.yml
ci/: run_bazel_test_with_docker.sh
litert/c/: CMakeLists.txt  litert_accelerator.cc  litert_accelerator.h  litert_accelerator_compilation_options.cc  litert_accelerator_compilation_options.h  litert_accelerator_compilation_options_test.cc  litert_accelerator_registration.cc  litert_accelerator_registration.h  litert_accelerator_registration_test.cc  litert_accelerator_test.cc  litert_c_api_common_test.c  litert_common.cc  litert_common_test.cc  litert_compilation_options.cc  litert_compilation_options.h  litert_compilation_options_test.cc  litert_compiled_model.cc  litert_compiled_model.h  litert_compiled_model_test.cc  litert_dispatch_delegate.h  litert_environment.cc  litert_environment.h  litert_environment_options.cc  litert_environment_options.h  litert_environment_options_test.cc  litert_event.cc  litert_event.h  litert_logging.cc  litert_logging.h  litert_logging_test.cc  litert_model.cc  litert_model.h  litert_model_test.cc  litert_options.cc  litert_options.h  litert_options_test.cc  litert_tensor_buffer.cc  litert_tensor_buffer.h  litert_tensor_buffer_requirements.cc  litert_tensor_buffer_requirements.h  (+2 more)
litert/python/aot/ai_pack_utils/: BUILD  ai_pack_export.py
litert/python/aot/core/: types.py
litert/runtime/: open_cl_memory.h
tflite/tools/cmake/modules/: xnnpack.cmake
